--- a/WEBSITE/style.css
+++ b/WEBSITE/style.css
@@ -91,7 +91,7 @@ h4{
 .contact{
     width: 100%;
     height: 290px;
-    background: green;
+    background: gray;
     display: flex;
     align-items: center;
     flex-direction: column;
